# Kandinsky-2

./: .gitignore  launch_gradio.py  pyproject.toml
kandinsky2/: __init__.py  kandinsky2_1_model.py
